# 3c

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/3c/: 3c.h  context.h
include/3c/core/: api.h  assert.h  core.h  log.h  platform.h  time.h  utils.h
include/3c/events/: event.h  key_events.h  mouse_events.h  window_events.h
include/3c/graphics/: graphics.h  index_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h
include/3c/graphics/cameras/: camera.h  orthographic_camera.h  perspective_camera.h
include/3c/graphics/opengl/: opengl_index_buffer.h  opengl_renderer.h  opengl_shader.h  opengl_texture.h  opengl_vertex_array.h  opengl_vertex_buffer.h
include/3c/graphics/renderables/: quad.h
include/3c/input/: input.h  key_codes.h  mouse_codes.h
include/3c/input/glfw/: glfw_input.h
include/3c/window/: window.h
include/3c/window/glfw/: glfw_window.h
src/: context.cpp  pch.h
src/core/: core.cpp  log.cpp  time.cpp
src/graphics/: index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/graphics/camera/: orthographic_camera.cpp  perspective_camera.cpp
src/graphics/opengl/: opengl_index_buffer.cpp  opengl_renderer.cpp  opengl_shader.cpp  opengl_texture.cpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp
src/graphics/renderables/: quad.cpp
src/input/: input.cpp
src/input/glfw/: glfw_input.cpp
src/window/: window.cpp
src/window/glfw/: glfw_window.cpp
